# Sphera_QT

./: CMakeLists.txt  Main.qml
Sphera/: CMakeLists.txt  Main.qml  main.cpp  musiccatalog.cpp  musiccatalog.h
